# algorithms

./: .clang-format  .gitignore  Лаб 4.txt
lab1/: .gitignore  CMakeLists.txt  Makefile  task.txt  test.cmd
lab1/src/: args.c  args.cpp  args.h  main.c  main.cpp  utils.c  utils.cpp  utils.h
lab1/src_cstyle/: args.cpp  args.h  utils.cpp  utils.h
lab1/tests/: cyrillic.txt  cyrillic_output.txt  heavy.txt  heavy_output.txt  lorem.txt  lorem40_output.txt  lorem4ind_output.txt  lorem5_output.txt  lorem_output.txt
lab2/: CMakeLists.txt  Makefile
lab2/src/: InfixToPostfixParser.cpp  InfixToPostfixParser.h  ParseLogger.cpp  ParseLogger.h  PostfixCalculator.cpp  PostfixCalculator.h  main.cpp  stack.hpp
lab3/: CMakeLists.txt  Makefile
lab3/src/: ExpressionTreeParser.cpp  ExpressionTreeParser.h  InfixToPostfixParser.cpp  InfixToPostfixParser.h  Token.cpp  Token.h  common_inc.h  main.cpp  stack.hpp
lab4/: CMakeLists.txt
lab4/include/: Args.h  MaxWeightFinder.h  common_inc.h
lab4/samples/: 1.txt  2.txt  no_way.txt
lab4/src/: Args.cpp  GraphParser.cpp  GraphParser.h  MaxWeightFinder.cpp  MaxWeightFinder.h  common_inc.h  main.cpp
lab5/: CMakeLists.txt
lab5/include/: Args.h  DominoParser.h  MaxNumberFinder.h  common_inc.h
lab5/samples/: 2.txt  3.txt  4.txt
lab5/src/: Args.cpp  DominoParser.cpp  MaxNumberFinder.cpp  main.cpp
